Switch from KTar to libarchive to allow archival of files > ca. 8GB

BUG: 464712